syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option csharp_namespace = "Secrets";

package secrets;

service Secret {
  rpc GetSecret (SecretRequest) returns (SecretReply);
}
message SecretRequest {
  string name = 1;
}
message SecretReply {
  string name = 1;
  int32 version = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Value values = 5;
}
